# scribe

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PINIA_DECISION.md  README.md  THIRD_PARTY_LICENSES.md  index.html  justfile  overlay.html  package.json  vite.config.ts
src/: App.vue  Overlay.vue  audio.rs  constants.ts  error.rs  index.html  input.rs  main.js  main.rs  overlay-main.ts  router.ts  styles.css  transcribe.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  constants.rs  error.rs  history.rs  input.rs  lib.rs  main.rs  recording.rs  settings.rs  shortcuts.rs  transcribe.rs  tray.rs  warmup.rs
src/components/: AppHeader.vue  HotkeyInput.vue  Icon.vue  TranscriptionItem.vue
src/stores/: pendingDelete.ts
src/styles/: main.css  overlay.css
src/utils/: path.ts  time.ts
src/views/: HistoryView.vue  SettingsView.vue
