[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Tauri-based push-to-talk voice transcription app for macOS"
repository = "https://github.com/flahde/scribe"

[lib]
name = "scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Existing dependencies (from current Cargo.toml)
whisper-rs = { version = "0.15.1", features = ["coreml", "metal"] }
cpal = "0.17"
enigo = "0.6"
rubato = "0.16"
thiserror = "2.0"
png = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
